# Transparov

./: .gitignore  Cargo.toml
src/: main.rs
src/engine/: eval.rs  mod.rs  search.rs  threads.rs  ttable.rs
