[package]
name = "chessengine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3.2.0"
vampirc-uci = {version = "0.11", features = ["chess"]}
rand = "0.8.4"
log = "0.4"
simplelog = "^0.10.0"
more-asserts = "0.2.1"